Bug 1503986 - register Skia flattenables. r=rhunt