gfx/skia/skia/src/ports/SkGlobalInitialization_default.cpp
@@ -5,6 +5,7 @@
  * found in the LICENSE file.
  */
 
+#include "SkFlattenablePriv.h"
 #include "../../src/effects/SkDashImpl.h"
 #include "SkGradientShader.h"
 
